config/pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
      annotations:
        sidecar.opentelemetry.io/inject: 'true'
    spec:
      containers:
        - name: myapp
          image: jaegertracing/vertx-create-span:operator-e2e-tests
          ports:
            - containerPort: 8000
              protocol: TCP
