config/002-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubecon-2025-eu
  namespace: otel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubecon-2025-eu
  template:
    metadata:
      labels:
        app: kubecon-2025-eu
      annotations:
        sidecar.opentelemetry.io/inject: 'true'
    spec:
      containers:
        - name: kubecon-2025-eu
          image: ko://github.com/houshengbo/kubecon-2025-eu/cmd/application
          ports:
            - containerPort: 8000
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: kubecon-2025-eu-service
  #namespace: otel
spec:
  selector:
    app: kubecon-2025-eu
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: LoadBalancer

# kubectl port-forward service/kubecon-2025-eu-service 8000:30000
